--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,19 +129,31 @@ a {
     height: 70px;
     padding: 16px 0 16px 0;
 
-    border: 1px solid #fff;
+    border: 1px solid var(--main-color);
     border-radius: 30px;
-    background: transparent;
+    background: var(--main-color);
 
     color: #fff;
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 36px;
     letter-spacing: 0.1px;
+
+    transition: all 0.5s ease;
 }
 
-.btn:first-child {
+.btn__secondery {
     color: #fff;
+    background: transparent;
+    border: 1px solid #fff;
+}
+
+.btn:hover {
+    background: transparent;
+    border: 1px solid #fff;
+}
+
+.btn__secondery:hover {
     background: var(--main-color);
     border: 1px solid var(--main-color);
 }
