--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,3 +157,60 @@ a {
     background: var(--main-color);
     border: 1px solid var(--main-color);
 }
+
+/*  */
+
+.app-works h2 {
+    text-align: center;
+    font-size: 2.7rem;
+    font-weight: 600;
+    font-family: "Poppins", serif;
+    line-height: 44px;
+}
+
+.app-works__container {
+    display: flex;
+    padding: 40px 0;
+    height: 100%;
+}
+
+.image__container,
+.text-container {
+    width: 50%;
+    padding: 0 10px;
+}
+
+.image__container > img {
+    max-width: 250px;
+    height: 510px;
+}
+
+.image__right {
+    text-align: right;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+}
+.text-container h3 {
+    color: var(--main-color);
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 36px;
+}
+
+.text-container h4 {
+    padding: 15px 0;
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 57px;
+}
+
+.text-container p {
+    color: #696969;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
